# YoloVisualAids

./: .gitignore  README.md  YOLO_detection.py  announce.py  app.py  camera_name.py  camera_utils.py  coco_labels_cn.py  color_detction.py  detection_worker.py  device_utils.py  keyword_listener.py  main.py  pyproject.toml  roi_utils.py  traffic_logic.py  traffic_mode.py  tts.py  tts_queue.py  visual_styles.py  voice_control.py  yolo_utils.py
app/: __init__.py  gui.py  worker.py
detection/: api.py  cli.py  coco_labels_cn.py  core.py  yolo_utils.py
docs/: STRUCTURE.md
vision/: __init__.py  color_detection.py  roi_utils.py  traffic_cli.py  traffic_logic.py  traffic_mode.py  visual_styles.py
voice/: __init__.py  announce.py  keyword_listener.py  tts.py  tts_queue.py  voice_control.py
yva_io/: __init__.py  camera_name.py  camera_utils.py  device_utils.py
